<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_OutputCmd" Id="{8d0742ed-4361-441a-8bce-40feb4d004c2}">
    <Declaration><![CDATA[TYPE ST_OutputCmd :
STRUCT
	OutputType: DUT_OutputType;
	OutputTarget: INT;
	OutputValue1: LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>